--- a/config-files/gateway-service.yaml
+++ b/config-files/gateway-service.yaml
@@ -18,25 +18,13 @@ logging:
         locator:
           enabled: true
       routes:
-      - id: employee-service
-        uri: lb://employee-service
+      - id: labresults-service
+        uri: lb://labresults-service
         predicates:
-        - Path=/employee/**
+        - Path=/labresults/**
         filters:
-        - RewritePath=/employee/(?<path>.*), /$\{path}
-      - id: department-service
-        uri: lb://department-service
-        predicates:
-        - Path=/department/**
-        filters:
-        - RewritePath=/department/(?<path>.*), /$\{path}
-      - id: organization-service
-        uri: lb://organization-service
-        predicates:
-        - Path=/organization/**
-        filters:
-        - RewritePath=/organization/(?<path>.*), /$\{path}
-
+        - RewritePath=/labresults/(?<path>.*), /$\{path}
+      
  
   
 
