--- a/config-files/gateway-service.yaml
+++ b/config-files/gateway-service.yaml
@@ -19,12 +19,12 @@ logging:
           enabled: true
       routes:
       - id: labresults-service
-#        uri: lb://labresults-service
-        uri: http://localhost:8090
+        uri: lb://labresults-service
+#        uri: http://localhost:8090
         predicates:
         - Path=/labresults/**
-        filters:
-        - RewritePath=/labresults/(?<path>.*), /$\{path}
+#        filters:
+#        - RewritePath=/labresults/(?<path>.*), /$\{path}
       
  
   
