--- a/config-files/gateway-service.yaml
+++ b/config-files/gateway-service.yaml
@@ -25,8 +25,9 @@ logging:
         - Path=/labresults/**
         filters:
 #        - RewritePath=/labresults/(?<path>.*), /$\{path}
-        - RewritePath=/labresults/(?.*), /$\{path}
-      
+#        - RewritePath=/labresults/(?.*), /$\{path}
+         - RewritePath=/labresults/(?<mrn>.*), /$\{mrn}
+     
  
   
 
