--- a/config-files/discovery-service.yaml
+++ b/config-files/discovery-service.yaml
@@ -4,11 +4,11 @@ server:
 eureka:
   instance:
     hostname: localhost
-    health-check-url-path: /actuator/health
-    status-page-url-path: /actuator/info    
   client:
     registerWithEureka: false
     fetchRegistry: false
+       serviceUrl:
+       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 logging:
   level:
     org.springframework.cloud: 'DEBUG'
