--- a/config-files/discovery-service.yaml
+++ b/config-files/discovery-service.yaml
@@ -7,8 +7,8 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
-       serviceUrl:
-       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+#       serviceUrl:
+#       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
   
 
