--- a/config-files/discovery-service.yaml
+++ b/config-files/discovery-service.yaml
@@ -6,9 +6,9 @@ eureka:
     hostname: localhost
   client:
     registerWithEureka: false
-    fetchRegistry: false
-#       serviceUrl:
-#       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+    fetchRegistry: false       
+    serviceUrl:
+    defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
 
   
 
