--- a/gatewayservice/gatewayservice.yml
+++ b/gatewayservice/gatewayservice.yml
@@ -1,3 +1,3 @@
-gateway.uri.property: "http://localhost:8181"
-gateway.filter.rewritepath: "labresults/(?<mrn>.*"
+gateway.uri.property= "http://localhost:8181"
+gateway.filter.rewritepath= "labresults/(?<mrn>.*"
 
