--- a/labresultsservice/labresults.yml
+++ b/labresultsservice/labresults.yml
@@ -1,1 +1,32 @@
+server:
+  port: 8666
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+---
+logging:
+  level:
+    com.netflix.discovery: 'ON'
+    org.springframework.cloud.gateway: 'TRACE'
+
+
+
+spring:
+  profiles: docker
+  
+server:
+  port: 8888
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://discovery:8761/eureka/
+
+logging:
+  level:
+    com.netflix.discovery: 'ON'
+    org.springframework.cloud.gateway: 'TRACE'  
+  
 
