--- a/labresultsservice/labresultsservice.yml
+++ b/labresultsservice/labresultsservice.yml
@@ -6,6 +6,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+    instance:
+       leaseRenewalIntervalInSeconds: 30
 ---
 logging:
   level:
