--- a/labresultsservice/labresultsservice.yml
+++ b/labresultsservice/labresultsservice.yml
@@ -1,14 +1,15 @@
 server.port=${port:8181}
 spring.data.mongodb.uri=mongodb://localhost:27017/LabRecordsDB
 
-
 eureka:
+  instance:
+    preferIpAddress: true
   client:
+    registerWithEureka: true
+    fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
-  instance:
-    leaseRenewalIntervalInSeconds: 1
-    leaseExpirationDurationInSeconds: 2  
+
 ---
 logging:
   level:
