--- a/gatewayservice/gatewayservice.yml
+++ b/gatewayservice/gatewayservice.yml
@@ -2,9 +2,14 @@ server:
   port: 8555
 
 eureka:
+  instance:
+    preferIpAddress: true
   client:
+    registerWithEureka: true
+    fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
 ---
 logging:
   level:
